font color changed to white on products page and navbar logo increased to avoid distortion

--- a/src/components/Navigation/Navbar/Navbar.css
+++ b/src/components/Navigation/Navbar/Navbar.css
@@ -19,6 +19,7 @@
     text-decoration: none;
     font-size: 2rem;
     font-family: 'Audiowide', cursive;
+    width: 280px;
   }
   
   .fa-memory {
